--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,12 +13,16 @@
     <string name="lemon">Лимон</string>
     <string name="choose_drink_type">Выберите тип напитка</string>
     <string name="make_order">Сделать заказ</string>
+    <string name="name">Имя:</string>
+    <string name="drink">Напиток:</string>
+    <string name="drink_type">Тип напитка:</string>
+    <string name="additives_label">Добавки:</string>
 
     <array name="types_of_tea">
         <item>Черный</item>
         <item>Зелёный</item>
     </array>
-    
+
     <array name="types_of_coffee">
         <item>Американо</item>
         <item>Экспрессо</item>
